# prod_ready_rag_pipeline

./: .dockerignore  .env.example  .gitignore  ANSWERS.md  Dockerfile  README.md  case_studies.json  milvus.db  pyproject.toml  render.yaml
.github/workflows/: docker-deploy.yml  python-app.yml
.pytest_cache/: .gitignore
.pytest_cache/v/cache/: nodeids
scripts/: render_build.sh
src/: config.py  main.py
src/chunking/: base.py  chunking_strategies.py
src/llm/: base.py  ollama.py
src/rag/: evaluation.py  pipeline.py
src/vectorstore/: base.py  milvus_store.py
tests/: test_chunking_strategies.py  test_llm.py  test_pipeline.py  test_vectorstore.py
