[tool.poetry]
name = "rag-exercise"
version = "0.1.0"
description = "RAG Pipeline Exercise for AI Engineer Candidates"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pydantic = "^2.10.1"
pytest = "^8.3.3"
numpy = "^2.1.3"
typer = "^0.13.1"
httpx = "^0.27.2"
pydantic-settings = "^2.6.1"
pymilvus = "^2.4.9"
ragas = ">=0.2"
langchain-community = ">=0.3"
datasets = ">=2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
ruff = "^0.1.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "pymilvus.*",
    "ragas.*",
    "langchain_community.*",
    "datasets.*",
]
ignore_missing_imports = true